[gd_scene load_steps=4 format=2]

[ext_resource path="res://tests/Database_calls_test.gd" type="Script" id=1]
[ext_resource path="res://game_fonts/lmroman25.tres" type="DynamicFont" id=2]
[ext_resource path="res://game_fonts/lmroman70.tres" type="DynamicFont" id=3]

[node name="DatabaseTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 186.465
margin_right = 1671.0
margin_bottom = 1009.47

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 819.0
margin_bottom = 386.0

[node name="database_action1" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 819.0
margin_bottom = 244.0

[node name="action_name_lb" type="Label" parent="ScrollContainer/VBoxContainer/database_action1"]
margin_right = 819.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Sending game data to server"

[node name="action_name_lb2" type="Label" parent="ScrollContainer/VBoxContainer/database_action1"]
margin_top = 47.0
margin_right = 819.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
text = "Players are given by elimination order. The last is the winner."

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1"]
margin_top = 94.0
margin_right = 819.0
margin_bottom = 244.0

[node name="scroller" type="ScrollContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer"]
margin_right = 500.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 150 )
scroll_horizontal_enabled = false

[node name="player_list" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller"]
margin_right = 312.0
margin_bottom = 45.0
custom_constants/separation = 5

[node name="player_data" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list"]
margin_right = 312.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
text = "pseudo"

[node name="pseudo" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
margin_left = 51.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
margin_left = 205.0
margin_top = 3.0
margin_right = 258.0
margin_bottom = 17.0
text = "game_id"

[node name="gid" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
margin_left = 262.0
margin_right = 312.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
visible = false
margin_left = 316.0
margin_top = 3.0
margin_right = 430.0
margin_bottom = 17.0
text = "elimination_index"

[node name="elimination_index" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data"]
visible = false
margin_left = 434.0
margin_right = 484.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="player_data2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list"]
margin_top = 25.0
margin_right = 312.0
margin_bottom = 45.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
text = "pseudo"

[node name="pseudo" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
margin_left = 51.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
margin_left = 205.0
margin_top = 3.0
margin_right = 258.0
margin_bottom = 17.0
text = "game_id"

[node name="gid" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
margin_left = 262.0
margin_right = 312.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
visible = false
margin_left = 316.0
margin_top = 3.0
margin_right = 430.0
margin_bottom = 17.0
text = "elimination_index"

[node name="elimination_index" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/scroller/player_list/player_data2"]
visible = false
margin_left = 434.0
margin_right = 484.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer"]
margin_left = 504.0
margin_right = 812.0
margin_bottom = 150.0

[node name="add_player_bt" type="Button" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 150.0
text = "Add player"

[node name="remove_player_bt" type="Button" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 191.0
margin_bottom = 150.0
text = "Remove player"

[node name="db_call" type="Button" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer"]
margin_left = 195.0
margin_right = 308.0
margin_bottom = 150.0
text = "Send game data"

[node name="player_data" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer"]
visible = false
margin_left = 816.0
margin_right = 1128.0
margin_bottom = 150.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
margin_top = 68.0
margin_right = 47.0
margin_bottom = 82.0
text = "pseudo"

[node name="pseudo" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
margin_left = 51.0
margin_right = 201.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 20 )

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
margin_left = 205.0
margin_top = 68.0
margin_right = 258.0
margin_bottom = 82.0
text = "game_id"

[node name="gid" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
margin_left = 262.0
margin_right = 312.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 20 )

[node name="Label3" type="Label" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
visible = false
margin_left = 316.0
margin_top = 68.0
margin_right = 430.0
margin_bottom = 82.0
text = "elimination_index"

[node name="elimination_index" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/player_data"]
visible = false
margin_left = 434.0
margin_right = 484.0
margin_bottom = 150.0
rect_min_size = Vector2( 50, 20 )

[node name="database_action2" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 819.0
margin_bottom = 315.0

[node name="action_name_lb" type="Label" parent="ScrollContainer/VBoxContainer/database_action2"]
margin_right = 819.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Fetch player data by pseudo"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action2"]
margin_top = 47.0
margin_right = 819.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/database_action2/HBoxContainer"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
text = "pseudo"

[node name="pseudo" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action2/HBoxContainer"]
margin_left = 51.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action2/HBoxContainer"]
margin_left = 205.0
margin_right = 252.0
margin_bottom = 20.0

[node name="db_call" type="Button" parent="ScrollContainer/VBoxContainer/database_action2/HBoxContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 20.0
text = "Fetch"

[node name="database_action3" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 819.0
margin_bottom = 386.0

[node name="action_name_lb" type="Label" parent="ScrollContainer/VBoxContainer/database_action3"]
margin_right = 819.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Create new player"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action3"]
margin_top = 47.0
margin_right = 819.0
margin_bottom = 67.0

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/database_action3/HBoxContainer"]
margin_top = 3.0
margin_right = 47.0
margin_bottom = 17.0
text = "pseudo"

[node name="pseudo" type="TextEdit" parent="ScrollContainer/VBoxContainer/database_action3/HBoxContainer"]
margin_left = 51.0
margin_right = 201.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/database_action3/HBoxContainer"]
margin_left = 205.0
margin_right = 258.0
margin_bottom = 20.0

[node name="db_call" type="Button" parent="ScrollContainer/VBoxContainer/database_action3/HBoxContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 20.0
text = "Create"

[node name="Label" type="Label" parent="."]
margin_left = 760.0
margin_right = 1274.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 3 )
text = "Database tests"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer/add_player_bt" to="." method="_on_add_player_bt_button_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer/remove_player_bt" to="." method="_on_remove_player_bt_button_down"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/database_action1/HBoxContainer/HBoxContainer/db_call" to="." method="_on_db_call_button_down" binds= [ 1 ]]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/database_action2/HBoxContainer/HBoxContainer/db_call" to="." method="_on_db_call_button_down" binds= [ 2 ]]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/database_action3/HBoxContainer/HBoxContainer/db_call" to="." method="_on_db_call_button_down" binds= [ 3 ]]
